--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,7 +19,7 @@ jobs:
     
     - name: Install Iter8
       run: |
-        apt-get update && apt-get install wget
+        sudo apt-get install wget
         wget -qO- https://github.com/iter8-tools/iter8/releases/download/v0.9.0/iter8-linux-amd64.tar.gz | tar xvz -
         mv linux-amd64/iter8 /usr/local/bin
 
@@ -81,7 +81,7 @@ jobs:
     
     - name: Install Iter8
       run: |
-        apt-get update && apt-get install wget
+        sudo apt-get install wget
         wget -qO- https://github.com/iter8-tools/iter8/releases/download/v0.9.0/iter8-linux-amd64.tar.gz | tar xvz -
         mv linux-amd64/iter8 /usr/local/bin
 
