--- a/testlibchart/load-test-grpc/Chart.yaml
+++ b/testlibchart/load-test-grpc/Chart.yaml
@@ -20,3 +20,7 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
+dependencies:
+- name: iter8lib
+  version: 0.9.x
+  repository: file://../../charts/iter8lib
