--- a/testlibchart/load-test-http/Chart.yaml
+++ b/testlibchart/load-test-http/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: load-test-grpc
+name: load-test-http
 version: 0.9.0
-description: Load test, benchmark, and validate gRPC
+description: Load test, benchmark, and validate HTTP
 type: application
 keywords:
 - Iter8
-- gRPC
+- HTTP
 - load test
 - benchmark
 - validation
@@ -20,3 +20,7 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
+dependencies:
+- name: iter8lib
+  version: 0.9.x
+  repository: file://../../charts/iter8lib
