--- a/testlibchart/load-test-grpc/Chart.yaml
+++ b/testlibchart/load-test-grpc/Chart.yaml
@@ -22,6 +22,7 @@ maintainers:
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
 dependencies:
 - name: iter8lib
+  version: 0.9.x
   repository: file://../../charts/iter8lib
 appVersion: v0.9
 
