--- a/charts/iter8lib/templates/_k8sjob.yaml
+++ b/charts/iter8lib/templates/_k8sjob.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Release.Revision }}-spec
 stringData:
   experiment.yaml: |
-{{- include "experiment" . | indent 4 }}
+{{ include "experiment" . | indent 4 }}
 ---
 apiVersion: v1
 kind: Secret
