--- a/charts/iter8lib/templates/_k8sjob.yaml
+++ b/charts/iter8lib/templates/_k8sjob.yaml
@@ -1,5 +1,5 @@
 {{- define "iter8lib.k8sjob" -}}
-{{- $name = printf "%s-%s" .Release.Name .Release.Revision -}}
+{{- $name := printf "%s-%s" .Release.Name .Release.Revision -}}
 apiVersion: v1
 kind: Secret
 metadata:
