--- a/charts/load-test-http/Chart.yaml
+++ b/charts/load-test-http/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: load-test-http
 version: 0.9.0
-description: Load test, benchmark, and validate HTTP
+description: Load test, benchmark, and validate HTTP services
 type: application
 keywords:
 - Iter8
@@ -20,5 +20,8 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
+dependencies:
+- name: iter8lib
+  version: 0.9.x
+  repository: https://iter8-tools.github.io/hub
 appVersion: v0.9
-
