--- a/.github/workflows/releasecharts.yaml
+++ b/.github/workflows/releasecharts.yaml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config user.name "Iter8"
+          git config user.email "iter8tools@gmail.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v1
@@ -30,3 +30,9 @@ jobs:
           config: config.yaml
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Invoke integration tests
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: integration tests
+          token: ${{ secrets.PERSONAL_TOKEN }}
