--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -49,7 +49,7 @@ jobs:
       run: |
         set -e
         cd charts/load-test-http
-        iter8 gen -c . --set url=http://127.0.0.1/get
+        iter8 gen --sourceDir . --set url=http://127.0.0.1/get
         cat experiment.yaml
         iter8 run
         iter8 assert -c completed -c nofailure -c slos
@@ -58,7 +58,7 @@ jobs:
       run: |
         set -e
         cd charts/load-test-http
-        iter8 gen -c . --set url=http://127.0.0.1/get \
+        iter8 gen --sourceDir . --set url=http://127.0.0.1/get \
                   --set SLOs.http/latency-p25=80 \
                   --set SLOs.http/latency-p50=100 \
                   --set SLOs.http/latency-'p95\.0'=200
@@ -70,7 +70,7 @@ jobs:
       run: |
         set -e
         cd charts/load-test-http
-        iter8 gen -c . --set url=http://127.0.0.1/post \
+        iter8 gen --sourceDir . --set url=http://127.0.0.1/post \
                   --set payloadURL=https://cdn.pixabay.com/photo/2021/09/08/17/58/poppy-6607526_1280.jpg \
                   --set contentType="image/jpeg" \
                   --set SLOs.http/latency-p25=80 \
@@ -123,7 +123,7 @@ jobs:
         set -e
         cd charts/load-test-grpc
         export LOG_LEVEL=trace
-        iter8 gen -c . --set host="127.0.0.1:50051" \
+        iter8 gen --sourceDir . --set host="127.0.0.1:50051" \
                   --set call="helloworld.Greeter.SayHello" \
                   --set protoURL="https://raw.githubusercontent.com/grpc/grpc-go/master/examples/helloworld/helloworld/helloworld.proto" \
                   --set data.name="frodo" \
