--- a/charts/autox/Chart.yaml
+++ b/charts/autox/Chart.yaml
@@ -1,8 +1,12 @@
 apiVersion: v2
-name: iter8lib
-version: 0.9.0
-description: Iter8 library chart
-type: library
+name: autox
+version: 0.1.0
+description: Automatically launch Iter8 experiments in Kubernetes
+type: application
+keywords:
+- Iter8
+- experiment
+- auto launch
 home: https://iter8.tools
 sources:
 - https://github.com/iter8-tools/iter8
@@ -11,5 +15,5 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
-appVersion: v0.9
+appVersion: v0.10
 
