--- a/charts/autox/templates/configmap.yaml
+++ b/charts/autox/templates/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}
-stringData:
+data:
   triggers.yaml: |
-{{- .Values.triggers | indent 4 }}
+{{ .Values.triggers | toYaml | indent 4 }}
