--- a/charts/autox/templates/rbac.yaml
+++ b/charts/autox/templates/rbac.yaml
@@ -21,7 +21,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ $.Release.Name }}-{{ $trigger.kind }}
+  name: {{ $.Release.Name }}-watch-{{ $trigger.kind }}
   namespace: {{ $trigger.namespace }}
 subjects:
 - kind: ServiceAccount
