--- a/charts/abn-service/templates/configmap.yaml
+++ b/charts/abn-service/templates/configmap.yaml
@@ -11,11 +11,11 @@ data:
     {{- if eq $r "deployments" }}
     - group: apps
       version: v1
-      resources: deployments
+      resource: deployments
     {{- end }}
     {{- if eq $r "services" }}
     - version: v1
-      resources: services
+      resource: services
     {{- end }}
     {{- end }}
     namespaces:
