--- a/charts/abn-service/templates/service.yaml
+++ b/charts/abn-service/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: {{ .Release.Name }}
   annotations:
     iter8.tools/revision: {{ .Release.Revision | quote }}
 spec:
   selector:
     app.kubernetes.io/name: {{ .Release.Name }}
   ports:
-  - port: 80
+  - port: 50051
