--- a/charts/abn-service/Chart.yaml
+++ b/charts/abn-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: iter8-abn
-version: 0.10.1
+version: 0.1.1
 description: Iter8 ABn support serivce
 type: application
 keywords:
@@ -15,3 +15,4 @@ maintainers:
 - name: Iter8
   email: iter8-tools@gmail.com
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
+appVersion: v0.10
