--- a/charts/iter8/Chart.yaml
+++ b/charts/iter8/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: iter8
-version: 0.11.1
+version: 0.11.2
 description: Iter8 experiment library chart
 type: application
 home: https://iter8.tools
@@ -11,7 +11,7 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
-# dependencies:
-# - name: iter8lib
-#   version: 0.11.0
-#   repository:  https://iter8-tools.github.io/hub/
+dependencies:
+- name: iter8lib
+  version: 0.11.0
+  repository:  https://iter8-tools.github.io/hub/
