--- a/charts/iter8/Chart.yaml
+++ b/charts/iter8/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: iter8
-version: 0.11.2
+version: 0.12.0
 description: Iter8 experiment library chart
 type: application
 home: https://iter8.tools
@@ -13,5 +13,5 @@ maintainers:
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
 dependencies:
 - name: iter8lib
-  version: 0.11.0
+  version: 0.12.x
   repository:  https://iter8-tools.github.io/hub/
