--- a/charts/iter8/Chart.yaml
+++ b/charts/iter8/Chart.yaml
@@ -11,6 +11,7 @@ maintainers:
   email: spartha@us.ibm.com
   url: https://researcher.watson.ibm.com/researcher/view.php?person=us-spartha
 icon: https://github.com/iter8-tools/iter8/raw/master/mkdocs/docs/images/favicon.png
+appVersion: v0.12
 dependencies:
 - name: iter8lib
   version: 0.12.x
