--- a/charts/autox/templates/secret.yaml
+++ b/charts/autox/templates/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}
 data:
-  groups.yaml: |
-{{ .Values.groups | toYaml | indent 4 }}
+  apps.yaml: |
+{{ .Values.apps | toYaml | indent 4 }}
