--- a/charts/iter8/values.yaml
+++ b/charts/iter8/values.yaml
@@ -1,10 +1,5 @@
-### iter8Image default iter8 image used for running Kubernetes experiments
-iter8Image: iter8/iter8:0.11
+runner:
+  create: true
 
-### majorMinor is the minor version of Iter8
-majorMinor: v0.11
-
-### runner for Kubernetes experiments may be job, cronjob, or none
-runner: none
-
-logLevel: info
+app:
+  namespace: default
