--- a/charts/iter8lib/values.yaml
+++ b/charts/iter8lib/values.yaml
@@ -1,10 +1,11 @@
 ### iter8Image default iter8 image used for running Kubernetes experiments
-iter8Image: iter8/iter8:0.11
+iter8Image: iter8/iter8:0.12
 
 ### majorMinor is the minor version of Iter8
-majorMinor: v0.11
+majorMinor: v0.12
 
 ### runner for Kubernetes experiments may be job, cronjob, or none
-runner: none
+runner: 
+  type: none
 
 logLevel: info
