--- a/charts/abn-service/templates/roles.yaml
+++ b/charts/abn-service/templates/roles.yaml
@@ -38,3 +38,29 @@ roleRef:
   name: {{ $.Release.Name }}-watch-resources
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ $.Release.Name }}-metricstore
+  annotations: 
+    iter8.tools/revision: {{ $.Release.Revision | quote }}
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["create", "list", "get", "update", "patch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ $.Release.Name }}-metricstore
+  annotations: 
+    iter8.tools/revision: {{ $.Release.Revision | quote }}
+subjects:
+- kind: ServiceAccount
+  name: {{ $.Values.serviceaccount | default "default" | quote }}
+  namespace: {{ $.Release.Namespace }}
+roleRef:
+  kind: Role
+  name: {{ $.Release.Name }}-metricstore
+  apiGroup: rbac.authorization.k8s.io
