--- a/charts/abn-service/values.yaml
+++ b/charts/abn-service/values.yaml
@@ -1,5 +1,8 @@
 ### ABn service image
-image: iter8/iter8-abn:v0.10
+image: iter8/iter8-abn:v0.11
+
+service: 
+  port: 50051
 
 ### serviceaccount for execution of service
 # serviceaccount: default
