--- a/charts/abn-service/templates/serviceaccount.yaml
+++ b/charts/abn-service/templates/serviceaccount.yaml
@@ -1,8 +1,6 @@
-{{- if .Values.serviceaccount }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceaccount }}
+  name: {{ .Release.Name }}
   annotations:
     iter8.tools/revision: {{ .Release.Revision | quote }}
-{{- end }}
