--- a/charts/abn-service/templates/deployment.yaml
+++ b/charts/abn-service/templates/deployment.yaml
@@ -4,8 +4,10 @@ metadata:
   name: {{ .Release.Name }}
   labels:
     app.kubernetes.io/name: {{ .Release.Name }}
-  annotations:
-    iter8.tools/revision: {{ .Release.Revision | quote }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
 spec:
   replicas: 1
   selector:
