--- a/charts/abn-service/templates/configmap.yaml
+++ b/charts/abn-service/templates/configmap.yaml
@@ -2,8 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}
-  annotations: 
-    iter8.tools/revision: {{ .Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
 data:
   abn-config.yaml: | 
     resources: 
