--- a/charts/abn-service/templates/roles.yaml
+++ b/charts/abn-service/templates/roles.yaml
@@ -5,8 +5,12 @@ kind: Role
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  annotations: 
-    iter8.tools/revision: {{ $.Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ $.Release.Name }}
+    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
 rules:
 {{- range $r := $.Values.resources }}
 {{- if eq $r "deployments" }}
@@ -26,8 +30,12 @@ kind: RoleBinding
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  annotations: 
-    iter8.tools/revision: {{ $.Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ $.Release.Name }}
+    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
@@ -42,8 +50,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ $.Release.Name }}-metricstore
-  annotations: 
-    iter8.tools/revision: {{ $.Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ $.Release.Name }}
+    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
@@ -53,8 +65,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ $.Release.Name }}-metricstore
-  annotations: 
-    iter8.tools/revision: {{ $.Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ $.Release.Name }}
+    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ $.Release.Service }}
+    app.kubernetes.io/instance: {{ $.Release.Name }}
+    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
