--- a/charts/abn-service/templates/serviceaccount.yaml
+++ b/charts/abn-service/templates/serviceaccount.yaml
@@ -2,5 +2,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}
-  annotations:
-    iter8.tools/revision: {{ .Release.Revision | quote }}
+  labels:
+    app.kubernetes.io/name: {{ .Release.Name }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
