--- a/charts/abn-service/templates/roles.yaml
+++ b/charts/abn-service/templates/roles.yaml
@@ -5,12 +5,7 @@ kind: Role
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  labels:
-    app.kubernetes.io/name: {{ $.Release.Name }}
-    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ $.Release.Service }}
-    app.kubernetes.io/instance: {{ $.Release.Name }}
-    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
+  {{ template "iter8-abn.labels" $ }}
 rules:
 {{- range $r := $.Values.resources }}
 {{- if eq $r "deployments" }}
@@ -30,12 +25,7 @@ kind: RoleBinding
 metadata:
   name: {{ $.Release.Name }}-watch-resources
   namespace: {{ $ns }}
-  labels:
-    app.kubernetes.io/name: {{ $.Release.Name }}
-    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ $.Release.Service }}
-    app.kubernetes.io/instance: {{ $.Release.Name }}
-    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
+  {{ template "iter8-abn.labels" $ }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
@@ -50,12 +40,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ $.Release.Name }}-metricstore
-  labels:
-    app.kubernetes.io/name: {{ $.Release.Name }}
-    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ $.Release.Service }}
-    app.kubernetes.io/instance: {{ $.Release.Name }}
-    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
+  {{ template "iter8-abn.labels" $ }}
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
@@ -65,12 +50,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ $.Release.Name }}-metricstore
-  labels:
-    app.kubernetes.io/name: {{ $.Release.Name }}
-    helm.sh/chart: {{ $.Chart.Name }}-{{ $.Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ $.Release.Service }}
-    app.kubernetes.io/instance: {{ $.Release.Name }}
-    app.kubernetes.io/version: {{ $.Chart.AppVersion }}
+  {{ template "iter8-abn.labels" $ }}
 subjects:
 - kind: ServiceAccount
   name: {{ $.Release.Name }}
